go-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
      name: go-app
    spec:
      containers:
        - name: go-app
          image: gcr.io/pg-us-n-app-916555/ac/go-app:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          lifecycle:
            postStart:
              exec:
                command: ["sh", "-c", "/app/scripts/PostStart.sh"]
