go-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: go-app
  type: NodePort

---
