go-app/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-app
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ac-iuv-ip
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: go-app

spec:
  backend:
    serviceName: echoserver
    servicePort: 8080
  rules:
  - host: i.uvvv.icu
    http:
      paths: 
      - path: /app/*
        backend:
          serviceName: go-app
          servicePort: 8080
  tls:
  - hosts:
    - i.uvvv.icu
    secretName: uv-tls
